--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
-description: "我本可容忍黑暗 如果不曾见过太阳"
+description1: "Illusions"
+description2: "Only the ladder is real"
+description3: "The climb is all there is"
 ---
 
 {% for post in paginator.posts %}
