change img and less

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: "About"
-description: "Know your strengths Use them wisely"
+title: 角色详情
+description1: "曾以为会遇到风清扬"
+description2: "而如今只是个路人甲"
 header-img: "img/about-bg.jpg"
 ---
 
