--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
-title: Tags
+title: 天赋选择
 layout: default
-description: keep hungry keep foolish
+description: 执笔花间 快意恩仇 或 离经易道 济世悬壶
 header-img: "img/tag-bg.jpg"
 ---
 
@@ -10,7 +10,8 @@ header-img: "img/tag-bg.jpg"
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="site-heading" id="tag-heading">
+            	<!--<div class="site-heading" id="tag-heading">  -->
+                <div class="site-heading">
                     <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
                     <span class="subheading">{{ page.description }}</span>
                 </div>
