--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,8 @@
 ---
 title: 天赋选择
 layout: default
-description: 执笔花间 快意恩仇 或 离经易道 济世悬壶
+description1: 执笔花间 快意恩仇
+description2: 离经易道 济世悬壶
 header-img: "img/tag-bg.jpg"
 ---
 
@@ -13,7 +14,8 @@ header-img: "img/tag-bg.jpg"
             	<!--<div class="site-heading" id="tag-heading">  -->
                 <div class="site-heading">
                     <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
-                    <span class="subheading">{{ page.description }}</span>
+                    <span class="subheading">{{ page.description1 }}</span>
+                    <span class="subheading">{{ page.description2 }}</span>
                 </div>
             </div>
         </div>
